feat: inventory report
