# src/controllers/report.controller.ts
@@ -124,7 +124,15 @@ class ReportController {
       return res.status(500).json({ error: 'Failed to generate report' });
     }
   }
-
+  async inventoryReport(req: Request, res: Response) {
+    try {
+      const report = await ReportService.getInventoryReport();
+      return res.status(200).json(report);
+    } catch (err) {
+      console.error(err);
+      return res.status(500).json({ error: 'Failed to generate report' });
+    }
+  }
 
 }
 
