# swagger.yaml
@@ -1482,7 +1482,23 @@ paths:
                 type: object
         500:
           description: Server error
-
+  /report/inventory-report:
+    get:
+      tags:
+        - report
+      summary: Get Inventory Report
+      description: Fetches a report about inventory.
+      security:
+        - BearerAuth: []
+      responses:
+        200:
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: object
+        500:
+          description: Server error
   /report/sell_buy:
     get:
       tags:
